--- a/src/views/demo/cases/sudoku/sudoku.scss
+++ b/src/views/demo/cases/sudoku/sudoku.scss
@@ -4,7 +4,7 @@ $rootFontFamily: 'Consolas', '微软雅黑', 'Heiti';
 $shadow: 0.2rem 0.3rem 0.4rem rgba(48, 48, 48, 0.4);
 $shadowBottom: 0 0.2rem 0.3rem rgba(48, 48, 48, 0.4);
 $shadowTop: 0 -0.1rem 0.2rem rgba(48, 48, 48, 0.4);
-$borderColor: #888888;
+$borderColor: #000;
 // $borderWeight: #f00;
 $popupBlockSize: 6vw;
 * {
@@ -38,18 +38,8 @@ h2 {
   display: none !important;
 }
 
-.title {
-  height: 4.5rem;
-  line-height: 4.5rem;
-  padding: 0 5%;
-  background: steelblue;
-  color: white;
-  margin-bottom: 2rem;
-  box-shadow: $shadowBottom;
-}
-
 .container {
-  padding: 0 5vw;
+  padding: 0 36px;
 }
 
 .row {
@@ -61,7 +51,6 @@ h2 {
     font-size: 16px;
     padding: 0;
     margin: 0;
-    // flex: 1;
     height: 4vw;
     line-height: 4vw;
     width: 30px;
@@ -129,31 +118,26 @@ h2 {
 .dashboard {
   position: absolute;
   bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 1rem 0;
-  background: steelblue;
-  box-sizing: border-box;
-  box-shadow: $shadowTop;
-  height: 3rem;
+  width: 400px;
+  margin: 12px 36px;
+  height: 32px;
   .buttons {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    display: flex;
     button {
       font-family: $rootFontFamily;
-      flex: 1;
-      height: 3rem;
-      font-size: 1.3rem;
+      background: steelblue;
+      height: 32px;
+      font-size: 1rem;
       color: white;
-      background: transparent;
-      border: 1px solid #cccccc;
-      border-top: none;
-      border-right-width: 0;
-      &:last-child {
-        border-right-width: 1px;
+      border: 0;
+      border-radius: 4px;
+      margin: 0 10px;
+      padding: 0 12px;
+      &:first-child {
+        margin-left: 0;
       }
     }
   }
@@ -179,6 +163,17 @@ h2 {
       &.mark {
         color: transparent;
       }
+    }
+  }
+}
+
+.rules {
+  padding: 16px 36px;
+  p {
+    text-indent: 24px;
+    &:first-child {
+      text-indent: 0;
+      font-weight: bolder;
     }
   }
 }
